olympus/paperclip/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperclip
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperclip.ramoneees.com`)
      kind: Rule
      services:
        - name: paperclip
          port: 80
  tls:
    secretName: wildcard-ramoneees-com-tls
